# netvlad_tf_open

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
matlab/: evaluate_pr.m  get_example_stats.m  kitti_pr.m  net_class2struct.m
python/netvlad_tf/: image_descriptor.py  layers.py  mat_to_checkpoint.py  net_from_mat.py  nets.py  precision_recall.py
tests/: test_kitti.py  test_net_from_mat.py  test_nets.py
